feature: 实现视频播放功能

--- a/app/src/main/res/layout/activity_a_native_player.xml
+++ b/app/src/main/res/layout/activity_a_native_player.xml
@@ -5,6 +5,6 @@
 
     <SurfaceView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="240dp"
         android:id="@+id/a_native_surface_view"/>
 </FrameLayout>
