--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,21 @@
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:text="FFmpeg + ANatievWindow"
-        android:id="@+id/play_native_window"/>
+        android:id="@+id/play_native_window"
+        android:background="#2196F3"
+        android:textColor="@color/white"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="OpenGLWindow"
+        android:id="@+id/play_opengl"
+        android:background="#009688"
+        android:textColor="@color/white"
+        android:gravity="center"/>
 
 </LinearLayout>
